# ncs-matter-edge-ai

./: .clang-format  .gitignore  CMakeLists.txt  CODEOWNERS  Kconfig  LICENSE  README.md  west.yml
.github/: doc-addon.env
docs/: Doxyfile  conf.py  config.rst  custom.properties  index.rst  known_issues.rst  links.txt  release-notes.rst  release_notes.rst  requirements-doc.txt  setup.rst  shortcuts.txt  (+3 more)
samples/generic_switch/: CMakeLists.txt  Kconfig  README.rst  prj.conf  prj_release.conf  sample.yaml  sysbuild.conf
samples/generic_switch/boards/: dmic_adafruit.dtsi  dmic_low_power.dtsi  nrf54lm20dk_nrf54lm20b_cpuapp.overlay
samples/generic_switch/src/: app_task.cpp  app_task.h  chip_project_config.h  descriptor-namespaces.h  generic_switch.cpp  generic_switch.h  keyword_app.h  keyword_impl.c  nrf_edgeai_ww_kw_impl.cpp  wakeword_impl.c
samples/generic_switch/src/generic_switch_zap/: generic_switch.matter  generic_switch.zap
samples/generic_switch/src/generic_switch_zap/zap-generated/: CodeDrivenInitShutdown.cpp  IMClusterCommandHandler.cpp  PluginApplicationCallbacks.h  access.h  callback-stub.cpp  endpoint_config.h  gen_config.h
samples/generic_switch/src/models/kws/nrf_edgeai_generated/: nrf_edgeai_user_model.c  nrf_edgeai_user_model_axon.h
samples/generic_switch/src/models/wakeword/nrf_edgeai_generated/: nrf_edgeai_user_model.c  nrf_edgeai_user_model.h  nrf_edgeai_user_model_axon.h  nrf_edgeai_user_types.h
samples/generic_switch/sysbuild/mcuboot/: prj.conf
samples/generic_switch/sysbuild/mcuboot/boards/: nrf54lm20dk_nrf54lm20b_cpuapp.overlay
(+55 files in other folders)
